--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>100Yuristlar</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive/style.css">
 </head>
 
 <body>
@@ -113,9 +114,9 @@
                 </div>
             </div>
         </nav>
+        <p class="url">Главная / Горячая линия</p>
         <div class="header">
             <div class="left">
-                <p class="url">Главная / Горячая линия</p>
                 <h1 class="title">Горячая линия по оказанию <br> юридической помощи онлайн</h1>
                 <p class="text">
                     Профессиональная помощь доступна круглосуточно – заявки обрабатываются в <br> любое время дня и ночи. Обращаясь к специалистам «100 Юристов», вы можете <br> рассчитывать на прозрачные, понятные условия сотрудничества
@@ -413,58 +414,22 @@
                 <input type="number " id="input " required=" ">
                 <label for="input " class="label ">Номер телефона</label>
             </div>
-            <button href=" " class="zayavka-opener ">Заказать звонок</button>
+            <button class="zayavka-opener ">Заказать звонок</button>
             <p>Отправляя вопрос, вы соглашаетесь с условиями Пользовательского соглашения</p>
         </div>
     </div>
 
     <!-- //////////// Ask form end \\\\\\\\\\\\\\\\\ -->
 
-    <!-- seo coding -->
-
-    <section>
-        <div class="seo ">
-            <div class="top " id="seotop ">
-                <h2>Блок для SEO текста</h2>
-                <p>Срочно понадобились услуги профессионального юриста или адвоката? Решение есть! Наша горячая юридическая линия – возможность оперативно, абсолютно бесплатно получить ответ на любой вопрос. Теперь не нужно записываться на офлайн-прием и
-                    тратить время на поездку и очереди перед кабинетом.
-                    <br> <br> Профессиональная помощь доступна круглосуточно – заявки обрабатываются в любое время дня и ночи. Обращаясь к специалистам «100 Юристов», вы можете рассчитывать на прозрачные, понятные условия сотрудничества.
-                </p>
-                <p class="hiddenp ">Срочно понадобились услуги профессионального юриста или адвоката? Решение есть! Наша горячая юридическая линия – возможность оперативно, абсолютно бесплатно получить ответ на любой вопрос. Теперь не нужно записываться на офлайн-прием и
-                    тратить время на поездку и очереди перед кабинетом. <br> <br> Профессиональная помощь доступна круглосуточно – заявки обрабатываются в любое время дня и ночи. Обращаясь к специалистам «100 Юристов», вы можете рассчитывать на прозрачные,
-                    понятные условия сотрудничества.
-                </p>
-            </div>
-            <div class="bottom " id="seo ">
-                <p>Показать весь текст</p>
-            </div>
-        </div>
-    </section>
-
-    <script>
-        var buttonSEO = document.querySelector('#seo')
-        var seotop = document.querySelector('#seotop')
-        var hiddenp = document.querySelector('.hiddenp')
-        buttonSEO.addEventListener('click', function() {
-            if (seotop.style.height == '200px') {
-                seotop.style.height = '350px'
-            } else {
-                seotop.style.height = '200px'
-            }
-        })
-    </script>
-
-    <!-- seo coding end -->
-
     <!-- klient section coding -->
 
-    <section class="klient-section ">
-        <div class="klient ">
-            <div class="top ">
+    <section class="klient-section">
+        <div class="klient">
+            <div class="top">
                 <h1>Отзывы наших клиентов</h1>
             </div>
-            <div class="bottom ">
-                <div class="left ">
+            <div class="bottom">
+                <div class="left">
                     <button class="prev-btn ">
                         <img src="../img/chap.png " alt=" ">
                     </button>
@@ -763,6 +728,9 @@
     </footer>
 
     <!-- footer coding end -->
+    <script>
+
+    </script>
 
     <script src="script.js "></script>
 </body>
